# crowdnav_arena

./: .gitignore  README.md  colcon_build  create_env  requirements.txt
log/: latest_build
src/: nav2py_crowdnav_attngraph_controller.yaml
src/2D_lidar_person_detection/: .pre-commit-config.yaml  findloc_bgrm.py
src/2D_lidar_person_detection/dr_spaam/: setup.py
src/2D_lidar_person_detection/dr_spaam_ros/: CMakeLists.txt  node.py  package.xml  setup.py
src/2D_lidar_person_detection/dr_spaam_ros/config/: dr_spaam_ros.yaml  topics.yaml
src/2D_lidar_person_detection/dr_spaam_ros/dr_spaam_ros/: node.py
src/2D_lidar_person_detection/dr_spaam_ros/launch/: dr_spaam_ros.launch.py
src/2D_lidar_person_detection/dr_spaam_ros/scripts/: drow_data_converter.py
src/CrowdNav_Prediction_AttnGraph/: evaluation.py  package.xml  requirements.txt  setup.cfg  setup.py
src/CrowdNav_Prediction_AttnGraph/crowdnav_base/: arguments.py  (+5 more)
src/crowdnav_base/: setup.cfg  setup.py
src/crowdnav_planners/: package.xml  setup.cfg  setup.py
src/dr_spaam.egg-info/: SOURCES.txt
src/nav2py_crowdnav_attngraph_controller/: CMakeLists.txt  nav2py_crowdnav_attngraph_controller.xml  package.xml  pyproject.toml
src/nav2py_template/nav2py_template_controller/: pyproject.toml
src/nav2py_template/nav2py_template_controller/nav2py_template_controller/: planner.py
src/nav2py_template/nav2py_template_controller/nav2py_template_controller/nav2py_template_controller/: __main__.py  test_env.py
trained_models/crowdnav_sim/: arguments.py  progress.csv
trained_models/my_model/: progress.csv
(+25 files in other folders)
