<?xml version="1.0"?>
<package format="3">
  <name>dr_spaam_ros</name>
  <version>1.0.0</version>
  <description>ROS interface for DR-SPAAM detector</description>

  <maintainer email="jia@vision.rwth-aachen.de">Dan Jia</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
